--- a/room.html
+++ b/room.html
@@ -138,10 +138,12 @@
 <audio src="/snd/coin.wav" controls="controls"></audio> 
 
 <ul id="instruments">
-    <li class="instrument" data-color="red"    data-label="tom"   data-sound="tom"></li>
-    <li class="instrument" data-color="indigo" data-label="bass"  data-sound="bd"></li>
-    <li class="instrument" data-color="orange" data-label="snare" data-sound="sn"></li>
-    <li class="instrument" data-color="green"  data-label="high snare" data-sound="hh1"></li>
+    <li class="instrument" data-color="red"    data-name="hit-hat" data-sound="HH_2_closed_a"></li>
+    <li class="instrument" data-color="indigo" data-name="kick"    data-sound="Kick_Reg_1a"></li>
+    <li class="instrument" data-color="orange" data-name="snare"   data-sound="Snare_Reg_1a"></li>
+    <li class="instrument" data-color="green"  data-name="tom"     data-sound="Tom_Hi"></li>
+    <li class="instrument" data-color="blue"   data-name="ride"    data-sound="Ride_Side"></li>
+    <li class="instrument" data-color="yellow" data-name="stick"   data-sound="Stick"></li>
 </ul>
 
 <h2>share</h2>
@@ -213,7 +215,7 @@ var MachineDrums = function() {
         // and adds the text inside it
         $$('.instrument').each(function () {
             this.style.backgroundColor = this.dataset.color;
-            this.innerHTML = this.dataset.label;
+            this.innerHTML = this.dataset.name;
         });
     });
 
