Admin CSS Fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This is a mobile machine drum to play with friends in the same room. Admin can control intruments in the peers mobile devices.">
     <meta name="keywords" content="mobile machine drum, mobile, machine, drum, machine drum, play, friend, friends">
     <meta name="author" content="Free Geeks a.k.a. RRR">
-	<title>Mobile Machine Drum</title>
+	<title>Mobile Drums</title>
 	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
