--- a/room.html
+++ b/room.html
@@ -18,10 +18,12 @@
 <audio src="/snd/coin.wav" controls="controls"></audio> 
 
 <ul id="instruments">
-    <li class="instrument" data-color="orange" data-name="snare"   data-sound="Snare_Reg_1a"></li>
-    <li class="instrument" data-color="green"  data-name="tom"     data-sound="Tom_Hi"></li>
-    <li class="instrument" data-color="blue"   data-name="ride"    data-sound="Ride_Side"></li>
-    <li class="instrument" data-color="yellow" data-name="stick"   data-sound="Stick"></li>
+    <li class="instrument" data-color="red"    data-name="hit-hat" data-sound="HH_2_closed_a"><span></span><span></span></li>
+    <li class="instrument" data-color="indigo" data-name="kick"    data-sound="Kick_Reg_1a"><span></span></li>
+    <li class="instrument" data-color="orange" data-name="snare"   data-sound="Snare_Reg_1a"><span></span></li>
+    <li class="instrument" data-color="green"  data-name="tom"     data-sound="Tom_Hi"><span></span></li>
+    <li class="instrument" data-color="blue"   data-name="ride"    data-sound="Ride_Side"><span></span></li>
+    <li class="instrument" data-color="yellow" data-name="stick"   data-sound="Stick"><span></span></li>
 </ul>
 
 <h2>share</h2>
