mediaqueries fixes css and logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h1>Mobile Machine Drum</h1>
 <p>play drums using your friend’s mobiles!</p>
-<a href="javascript:;" class="play">play!</a>
+<a href="javascript:;" class="play">START</a>
 <input type="text" id="room" name="" value="" placeholder="name your room">
 	
 <script src="/socket.io/socket.io.js"></script>
