Pointing to final location

--- a/room.html
+++ b/room.html
@@ -91,7 +91,7 @@ var MachineDrums = function() {
 
     // Config options
     self.server = {
-        hostname: '192.168.2.2',
+        hostname: 'mobiledrums.freegeeks.nl',
         port    : 8443
     };
     self.animationTime = 150; // milliseconds
