--- a/room.html
+++ b/room.html
@@ -14,7 +14,8 @@
 <body>
 
 <h1>Mobile Machine Drum</h1>
-<p>play drums using your friend's mobiles!</p>
+<p>invite your drums:</p>
+<i>url: mobiledrums.freegeeks.nl/test</i>
 <audio src="/snd/coin.wav" controls="controls"></audio> 
 
 <ul id="instruments">
