Changed beat to real DNB

--- a/room.html
+++ b/room.html
@@ -179,19 +179,19 @@ MachineDrums.prototype.roleAsAdmin = function() {
         self.socket.emit('start', { room: self.room, tempo: 120, pattern: [
             [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
             null,
-            [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
-            null,
             [ 'HH_2_closed_a' ],
             null,
             [ 'Snare_Reg_1a', 'HH_2_closed_a' ],
             null,
-            [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
+            [  'HH_2_closed_a' ],
             null,
-            [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
+            [ 'HH_2_closed_a' ],
             null,
-            [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
+            [ 'Kick_Reg_1a' ],
             null,
-            [ 'Snare_Reg_1a', 'HH_2_closed_a'],
+            [ 'Snare_Reg_1a'],
+            [ 'Kick_Reg_1a' ],
+            null,
             null
         ]});
     });
