--- a/room.html
+++ b/room.html
@@ -96,6 +96,8 @@ var MachineDrums = function() {
         hostname: 'mobiledrums.freegeeks.nl',
         port    : 8443
     };
+    // self.server.hostname = 'mobiledrums.freegeeks.local';
+
     self.animationTime = 150; // milliseconds
 
     // Current sound
@@ -115,7 +117,7 @@ var MachineDrums = function() {
     self.room = location.pathname;
 
     // Update placeholder
-    $$('em span').innerHTML = 'http://' + self.server.hostname + ':' + self.server.port + '/' + room;
+    $$('em span').innerHTML = 'http://' + self.server.hostname + ':' + self.server.port + '/' + self.room;
 
     // Handle the socket communication
     var socketHandler = function() {
