Fixing url styles

--- a/room.html
+++ b/room.html
@@ -15,7 +15,7 @@
 
 <h1>Mobile Machine Drum</h1>
 <p>invite your drums:</p>
-<em><span>url:</span> mobiledrums.freegeeks.nl/test</em>
+<em>url: <span>...</span></em>
 <audio src="/snd/coin.wav" controls="controls"></audio> 
 
 <ul id="instruments">
